--- a/VandyMobile/AppsDetailViewController.xib
+++ b/VandyMobile/AppsDetailViewController.xib
@@ -58,20 +58,36 @@
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">268</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUIImageView" id="68357363">
+							<object class="IBUIView" id="610433822">
 								<reference key="NSNextResponder" ref="238490055"/>
 								<int key="NSvFlags">292</int>
+								<array class="NSMutableArray" key="NSSubviews">
+									<object class="IBUIImageView" id="68357363">
+										<reference key="NSNextResponder" ref="610433822"/>
+										<int key="NSvFlags">292</int>
+										<string key="NSFrameSize">{80, 80}</string>
+										<reference key="NSSuperview" ref="610433822"/>
+										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView" ref="419925950"/>
+										<string key="NSReuseIdentifierKey">_NS:9</string>
+										<bool key="IBUIUserInteractionEnabled">NO</bool>
+										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+										<object class="NSCustomResource" key="IBUIImage">
+											<string key="NSClassName">NSImage</string>
+											<string key="NSResourceName">VandyMobileBackgroundV3@2x.png</string>
+										</object>
+									</object>
+								</array>
 								<string key="NSFrame">{{31, 15}, {80, 80}}</string>
 								<reference key="NSSuperview" ref="238490055"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="419925950"/>
+								<reference key="NSNextKeyView" ref="68357363"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<object class="NSCustomResource" key="IBUIImage">
-									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">VandyMobileBackgroundV3@2x.png</string>
+								<object class="NSColor" key="IBUIBackgroundColor" id="1012247286">
+									<int key="NSColorSpace">3</int>
+									<bytes key="NSWhite">MCAwAA</bytes>
 								</object>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
 							<object class="IBUILabel" id="709355122">
 								<reference key="NSNextResponder" ref="238490055"/>
@@ -187,7 +203,7 @@
 							<object class="IBUITextView" id="342051862">
 								<reference key="NSNextResponder" ref="238490055"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 109}, {280, 143}}</string>
+								<string key="NSFrame">{{20, 109}, {280, 151}}</string>
 								<reference key="NSSuperview" ref="238490055"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="766951522"/>
@@ -223,7 +239,7 @@
 									<object class="IBUILabel" id="403653958">
 										<reference key="NSNextResponder" ref="766951522"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{0, 88}, {129, 23}}</string>
+										<string key="NSFrame">{{0, 52}, {129, 23}}</string>
 										<reference key="NSSuperview" ref="766951522"/>
 										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="1006531403"/>
@@ -259,9 +275,10 @@
 									<object class="IBUIButton" id="1006531403">
 										<reference key="NSNextResponder" ref="766951522"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{32, 20}, {64, 91}}</string>
+										<string key="NSFrame">{{32, -16}, {64, 91}}</string>
 										<reference key="NSSuperview" ref="766951522"/>
 										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView" ref="883750040"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -296,13 +313,11 @@
 									<object class="IBUIButton" id="883750040">
 										<reference key="NSNextResponder" ref="766951522"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{137, 53}, {129, 45}}</string>
+										<string key="NSFrame">{{151, 20}, {109, 38}}</string>
 										<reference key="NSSuperview" ref="766951522"/>
 										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="403653958"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
-										<float key="IBUIAlpha">0.60000002384185791</float>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 										<int key="IBUIContentHorizontalAlignment">0</int>
 										<int key="IBUIContentVerticalAlignment">0</int>
@@ -321,22 +336,19 @@
 										<reference key="IBUIFont" ref="161119441"/>
 									</object>
 								</array>
-								<string key="NSFrame">{{20, 232}, {280, 122}}</string>
+								<string key="NSFrame">{{20, 268}, {280, 86}}</string>
 								<reference key="NSSuperview" ref="238490055"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="883750040"/>
+								<reference key="NSNextKeyView" ref="403653958"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<object class="NSColor" key="IBUIBackgroundColor">
-									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MCAwAA</bytes>
-								</object>
+								<reference key="IBUIBackgroundColor" ref="1012247286"/>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
 						</array>
 						<string key="NSFrameSize">{320, 367}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="68357363"/>
+						<reference key="NSNextKeyView" ref="610433822"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -379,14 +391,6 @@
 						<reference key="destination" ref="82637965"/>
 					</object>
 					<int key="connectionID">5</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">appIconImage</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="68357363"/>
-					</object>
-					<int key="connectionID">9</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -445,6 +449,22 @@
 					<int key="connectionID">43</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">appIconImage</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="68357363"/>
+					</object>
+					<int key="connectionID">9</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">appIconImageContainerView</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="610433822"/>
+					</object>
+					<int key="connectionID">46</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">appStoreButtonPressed</string>
 						<reference key="source" ref="883750040"/>
@@ -488,10 +508,10 @@
 						<array class="NSMutableArray" key="children">
 							<reference ref="342051862"/>
 							<reference ref="766951522"/>
-							<reference ref="68357363"/>
 							<reference ref="709355122"/>
 							<reference ref="419925950"/>
 							<reference ref="551930444"/>
+							<reference ref="610433822"/>
 						</array>
 						<reference key="parent" ref="191373211"/>
 					</object>
@@ -521,11 +541,6 @@
 						<reference key="parent" ref="238490055"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">6</int>
-						<reference key="object" ref="68357363"/>
-						<reference key="parent" ref="238490055"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">40</int>
 						<reference key="object" ref="766951522"/>
 						<array class="NSMutableArray" key="children">
@@ -550,6 +565,19 @@
 						<reference key="object" ref="883750040"/>
 						<reference key="parent" ref="766951522"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">45</int>
+						<reference key="object" ref="610433822"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="68357363"/>
+						</array>
+						<reference key="parent" ref="238490055"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">6</int>
+						<reference key="object" ref="68357363"/>
+						<reference key="parent" ref="610433822"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -567,6 +595,7 @@
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="40.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="42.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="45.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="8.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -575,7 +604,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">44</int>
+			<int key="maxID">46</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -584,6 +613,7 @@
 					<string key="superclassName">UIViewController</string>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="appIconImage">UIImageView</string>
+						<string key="appIconImageContainerView">UIView</string>
 						<string key="appStoreButton">UIButton</string>
 						<string key="backgroundView">UIImageView</string>
 						<string key="belowTextViewContainerView">UIView</string>
@@ -597,6 +627,10 @@
 						<object class="IBToOneOutletInfo" key="appIconImage">
 							<string key="name">appIconImage</string>
 							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="appIconImageContainerView">
+							<string key="name">appIconImageContainerView</string>
+							<string key="candidateClassName">UIView</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="appStoreButton">
 							<string key="name">appStoreButton</string>
