--- a/VandyMobile/AppsDetailViewController.xib
+++ b/VandyMobile/AppsDetailViewController.xib
@@ -58,15 +58,15 @@
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">268</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUIView" id="610433822">
+							<object class="IBUIView" id="944787077">
 								<reference key="NSNextResponder" ref="238490055"/>
 								<int key="NSvFlags">292</int>
 								<array class="NSMutableArray" key="NSSubviews">
 									<object class="IBUIImageView" id="68357363">
-										<reference key="NSNextResponder" ref="610433822"/>
+										<reference key="NSNextResponder" ref="944787077"/>
 										<int key="NSvFlags">292</int>
 										<string key="NSFrameSize">{80, 80}</string>
-										<reference key="NSSuperview" ref="610433822"/>
+										<reference key="NSSuperview" ref="944787077"/>
 										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="419925950"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -83,7 +83,7 @@
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="68357363"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<object class="NSColor" key="IBUIBackgroundColor" id="1012247286">
+								<object class="NSColor" key="IBUIBackgroundColor" id="878447637">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MCAwAA</bytes>
 								</object>
@@ -110,7 +110,7 @@
 								<string key="IBUIShadowOffset">{0, 1}</string>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<string key="IBUIText">My Great App</string>
-								<object class="NSColor" key="IBUITextColor">
+								<object class="NSColor" key="IBUITextColor" id="738962401">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MCAwIDAAA</bytes>
 								</object>
@@ -203,7 +203,7 @@
 							<object class="IBUITextView" id="342051862">
 								<reference key="NSNextResponder" ref="238490055"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 109}, {280, 151}}</string>
+								<string key="NSFrame">{{20, 109}, {280, 160}}</string>
 								<reference key="NSSuperview" ref="238490055"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="766951522"/>
@@ -236,54 +236,18 @@
 								<reference key="NSNextResponder" ref="238490055"/>
 								<int key="NSvFlags">292</int>
 								<array class="NSMutableArray" key="NSSubviews">
-									<object class="IBUILabel" id="403653958">
+									<object class="IBUIButton" id="883750040">
 										<reference key="NSNextResponder" ref="766951522"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{0, 52}, {129, 23}}</string>
+										<string key="NSFrame">{{144, 16}, {131, 46}}</string>
 										<reference key="NSSuperview" ref="766951522"/>
 										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="1006531403"/>
-										<string key="NSReuseIdentifierKey">_NS:9</string>
-										<bool key="IBUIOpaque">NO</bool>
-										<bool key="IBUIClipsSubviews">YES</bool>
-										<int key="IBUIContentMode">7</int>
-										<bool key="IBUIUserInteractionEnabled">NO</bool>
-										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-										<nil key="IBUIHighlightedColor"/>
-										<object class="NSColor" key="IBUIShadowColor">
-											<int key="NSColorSpace">1</int>
-											<bytes key="NSRGB">MC42IDAuNiAwLjYgMC42AA</bytes>
-										</object>
-										<string key="IBUIShadowOffset">{0, 1}</string>
-										<int key="IBUIBaselineAdjustment">0</int>
-										<int key="IBUILineBreakMode">0</int>
-										<string key="IBUIText">Dev Team</string>
-										<reference key="IBUITextColor" ref="945270914"/>
-										<int key="IBUITextAlignment">1</int>
-										<object class="IBUIFontDescription" key="IBUIFontDescription">
-											<int key="type">2</int>
-											<double key="pointSize">14</double>
-										</object>
-										<object class="NSFont" key="IBUIFont">
-											<string key="NSName">Helvetica-Bold</string>
-											<double key="NSSize">14</double>
-											<int key="NSfFlags">16</int>
-										</object>
-										<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
-										<int key="IBUIAutoshrinkMode">0</int>
-									</object>
-									<object class="IBUIButton" id="1006531403">
-										<reference key="NSNextResponder" ref="766951522"/>
-										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{32, -16}, {64, 91}}</string>
-										<reference key="NSSuperview" ref="766951522"/>
-										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="883750040"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 										<int key="IBUIContentHorizontalAlignment">0</int>
 										<int key="IBUIContentVerticalAlignment">0</int>
+										<string key="IBUINormalTitle">Button</string>
 										<object class="NSColor" key="IBUIHighlightedTitleColor" id="2141644">
 											<int key="NSColorSpace">3</int>
 											<bytes key="NSWhite">MQA</bytes>
@@ -298,57 +262,91 @@
 										</object>
 										<object class="NSCustomResource" key="IBUINormalImage">
 											<string key="NSClassName">NSImage</string>
-											<string key="NSResourceName">18-envelope@2x.png</string>
+											<string key="NSResourceName">app_store_badge.png</string>
 										</object>
 										<object class="IBUIFontDescription" key="IBUIFontDescription" id="164038634">
 											<int key="type">2</int>
 											<double key="pointSize">15</double>
 										</object>
-										<object class="NSFont" key="IBUIFont" id="161119441">
+										<object class="NSFont" key="IBUIFont" id="288611725">
 											<string key="NSName">Helvetica-Bold</string>
 											<double key="NSSize">15</double>
 											<int key="NSfFlags">16</int>
 										</object>
 									</object>
-									<object class="IBUIButton" id="883750040">
+									<object class="IBUIButton" id="1006531403">
 										<reference key="NSNextResponder" ref="766951522"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{151, 20}, {109, 38}}</string>
+										<string key="NSFrame">{{5, 16}, {131, 46}}</string>
 										<reference key="NSSuperview" ref="766951522"/>
 										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView" ref="882905101"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
+										<reference key="IBUIBackgroundColor" ref="738962401"/>
 										<bool key="IBUIOpaque">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 										<int key="IBUIContentHorizontalAlignment">0</int>
 										<int key="IBUIContentVerticalAlignment">0</int>
-										<string key="IBUINormalTitle">Button</string>
 										<reference key="IBUIHighlightedTitleColor" ref="2141644"/>
 										<object class="NSColor" key="IBUINormalTitleColor">
 											<int key="NSColorSpace">1</int>
 											<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 										</object>
 										<reference key="IBUINormalTitleShadowColor" ref="863301285"/>
-										<object class="NSCustomResource" key="IBUINormalImage">
-											<string key="NSClassName">NSImage</string>
-											<string key="NSResourceName">app_store_badge.png</string>
-										</object>
 										<reference key="IBUIFontDescription" ref="164038634"/>
-										<reference key="IBUIFont" ref="161119441"/>
+										<reference key="IBUIFont" ref="288611725"/>
+									</object>
+									<object class="IBUIImageView" id="882905101">
+										<reference key="NSNextResponder" ref="766951522"/>
+										<int key="NSvFlags">292</int>
+										<string key="NSFrame">{{13, 24}, {30, 30}}</string>
+										<reference key="NSSuperview" ref="766951522"/>
+										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView" ref="403653958"/>
+										<string key="NSReuseIdentifierKey">_NS:9</string>
+										<int key="IBUIContentMode">4</int>
+										<bool key="IBUIUserInteractionEnabled">NO</bool>
+										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+									</object>
+									<object class="IBUILabel" id="403653958">
+										<reference key="NSNextResponder" ref="766951522"/>
+										<int key="NSvFlags">292</int>
+										<string key="NSFrame">{{49, 27}, {75, 23}}</string>
+										<reference key="NSSuperview" ref="766951522"/>
+										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView" ref="883750040"/>
+										<string key="NSReuseIdentifierKey">_NS:9</string>
+										<bool key="IBUIOpaque">NO</bool>
+										<bool key="IBUIClipsSubviews">YES</bool>
+										<int key="IBUIContentMode">7</int>
+										<bool key="IBUIUserInteractionEnabled">NO</bool>
+										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+										<nil key="IBUIHighlightedColor"/>
+										<string key="IBUIShadowOffset">{0, 0}</string>
+										<int key="IBUIBaselineAdjustment">0</int>
+										<int key="IBUILineBreakMode">0</int>
+										<string key="IBUIText">Dev Team</string>
+										<reference key="IBUITextColor" ref="2141644"/>
+										<int key="IBUITextAlignment">1</int>
+										<reference key="IBUIFontDescription" ref="164038634"/>
+										<reference key="IBUIFont" ref="288611725"/>
+										<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
+										<int key="IBUIAutoshrinkMode">0</int>
 									</object>
 								</array>
 								<string key="NSFrame">{{20, 268}, {280, 86}}</string>
 								<reference key="NSSuperview" ref="238490055"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="403653958"/>
+								<reference key="NSNextKeyView" ref="1006531403"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<reference key="IBUIBackgroundColor" ref="1012247286"/>
+								<reference key="IBUIBackgroundColor" ref="878447637"/>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
 						</array>
 						<string key="NSFrameSize">{320, 367}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="610433822"/>
+						<reference key="NSNextKeyView" ref="944787077"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -460,9 +458,17 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">appIconImageContainerView</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="610433822"/>
+						<reference key="destination" ref="944787077"/>
 					</object>
 					<int key="connectionID">46</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">envelopeImageView</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="882905101"/>
+					</object>
+					<int key="connectionID">49</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -511,7 +517,7 @@
 							<reference ref="709355122"/>
 							<reference ref="419925950"/>
 							<reference ref="551930444"/>
-							<reference ref="610433822"/>
+							<reference ref="944787077"/>
 						</array>
 						<reference key="parent" ref="191373211"/>
 					</object>
@@ -544,8 +550,9 @@
 						<int key="objectID">40</int>
 						<reference key="object" ref="766951522"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="403653958"/>
 							<reference ref="1006531403"/>
+							<reference ref="882905101"/>
+							<reference ref="403653958"/>
 							<reference ref="883750040"/>
 						</array>
 						<reference key="parent" ref="238490055"/>
@@ -567,7 +574,7 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">45</int>
-						<reference key="object" ref="610433822"/>
+						<reference key="object" ref="944787077"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="68357363"/>
 						</array>
@@ -576,7 +583,12 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">6</int>
 						<reference key="object" ref="68357363"/>
-						<reference key="parent" ref="610433822"/>
+						<reference key="parent" ref="944787077"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">48</int>
+						<reference key="object" ref="882905101"/>
+						<reference key="parent" ref="766951522"/>
 					</object>
 				</array>
 			</object>
@@ -596,6 +608,7 @@
 				<string key="40.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="42.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="45.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="48.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="8.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -604,7 +617,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">46</int>
+			<int key="maxID">49</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -618,6 +631,7 @@
 						<string key="backgroundView">UIImageView</string>
 						<string key="belowTextViewContainerView">UIView</string>
 						<string key="descriptionTextView">UITextView</string>
+						<string key="envelopeImageView">UIImageView</string>
 						<string key="nameLabel">UILabel</string>
 						<string key="taglineLabel">UILabel</string>
 						<string key="teamButton">UIButton</string>
@@ -648,6 +662,10 @@
 							<string key="name">descriptionTextView</string>
 							<string key="candidateClassName">UITextView</string>
 						</object>
+						<object class="IBToOneOutletInfo" key="envelopeImageView">
+							<string key="name">envelopeImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
 						<object class="IBToOneOutletInfo" key="nameLabel">
 							<string key="name">nameLabel</string>
 							<string key="candidateClassName">UILabel</string>
@@ -677,7 +695,6 @@
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="18-envelope@2x.png">{48, 32}</string>
 			<string key="VandyMobileBackgroundCanvas@2x.png">{640, 734}</string>
 			<string key="VandyMobileBackgroundV3@2x.png">{640, 734}</string>
 			<string key="app_store_badge.png">{171, 59}</string>
